--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -56,6 +56,7 @@ parameters:
     os: macOS
     arch: universal
     ARCHFLAGS: '-arch arm64 -arch x86_64'
+    additionalRustTargets: x86_64-apple-darwin
   - name: windows_x86_64
     poolName: 'Azure-Pipelines-DevTools-EO'
     imageName: 'windows-2022'
