--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -51,12 +51,11 @@ parameters:
     imageName: 'mariner-2.0-arm64'
     os: linux
     arch: aarch64
-  - name: mac_universal
+  - name: mac_arm64
     poolName: 'AcesShared'
     os: macOS
-    arch: universal
-    ARCHFLAGS: '-arch arm64 -arch x86_64'
-    additionalRustTargets: x86_64-apple-darwin
+    arch: arm64
+    ARCHFLAGS: '-arch arm64'
   - name: windows_x86_64
     poolName: 'Azure-Pipelines-DevTools-EO'
     imageName: 'windows-2022'
