--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -126,7 +126,7 @@ extends:
           - task: UsePythonVersion@0
             inputs:
               versionSpec: $(PYTHON_VERSION)
-            condition: not(and(variables['Agent.OS'], 'Linux'), ne(variables['arch'], 'aarch64')))
+            condition: not(and(variables['Agent.OS'], 'Linux'), ne(variables['arch'], 'aarch64'))))
           # Build or restore LLVM
           - pwsh: New-Item -ItemType Directory -Path $(LLVM_DIRECTORY) -Force
             displayName: Ensure cache dir exists
