--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -126,6 +126,8 @@ extends:
           - task: UsePythonVersion@0
             inputs:
               versionSpec: $(PYTHON_VERSION)
+              ${{ if eq(target.arch, 'aarch64') }}:
+                architecture: "arm64"
             condition: not(and(eq(variables['Agent.OS'], 'Linux'), eq(variables['arch'], 'aarch64')))
           # Build or restore LLVM
           - pwsh: New-Item -ItemType Directory -Path $(LLVM_DIRECTORY) -Force
