--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -130,10 +130,7 @@ extends:
                 architecture: "arm64"
             condition: not(and(eq(variables['Agent.OS'], 'Linux'), eq(variables['arch'], 'aarch64')))
           # Build or restore LLVM
-          - task: PowerShell@2
-            inputs:
-              targetType: 'inline'
-              script: New-Item -ItemType Directory -Path $(LLVM_DIRECTORY) -Force
+          - pwsh: New-Item -ItemType Directory -Path $(LLVM_DIRECTORY) -Force
             displayName: Ensure cache dir exists
             condition: succeeded()
 
