Add qirlib feature flag to skip llvm_wrapper
This adds a flag to qirlib to allow Rust code building against it to skip building and linking the llvm_wrapper C++ code when that consumer doesn't need module metadata APIs.

--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -26,6 +26,7 @@ cc = "1.0"
 name = "qirlib"
 
 [features]
+no-module-metadata = []
 llvm18-1 = ["llvm-sys-181"]
 llvm19-1 = ["llvm-sys-191"]
 llvm20-1 = ["llvm-sys-201"]
