Add arm64 Windows support, update base images

--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -28,7 +28,7 @@ variables:
   LLVM_VERSION: 20
   # use this to invalidate the cache. Any time we update the OS
   # image, we should increment this to ensure that the cache is rebuilt.
-  CACHE_COUNTER: 3
+  CACHE_COUNTER: 8
 
 resources:
   repositories:
@@ -48,18 +48,28 @@ parameters:
     arch: x86_64
   - name: linux_aarch64
     poolName: 'Azure-Pipelines-DevTools-ARM64-EO'
-    imageName: 'mariner-2.0-arm64'
+    imageName: 'azurelinux-3.0-arm64'
     os: linux
     arch: aarch64
-  - name: mac_arm64
+  - name: mac_x86_64
+    poolName: 'Azure Pipelines'
+    imageName: 'macOS-15'
+    os: macOS
+    arch: x86_64
+  - name: mac_aarch64
     poolName: 'AcesShared'
     os: macOS
-    arch: arm64
+    arch: aarch64
   - name: windows_x86_64
     poolName: 'Azure-Pipelines-DevTools-EO'
     imageName: 'windows-2022'
     os: windows
     arch: x86_64
+  - name: windows_aarch64
+    poolName: 'Azure-Pipelines-DevTools-ARM64-EO'
+    imageName: 'Windows-2022-ARM64'
+    os: windows
+    arch: aarch64
 
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
@@ -83,13 +93,11 @@ extends:
             os: ${{ target.os }}
             ${{ if eq(target.arch, 'aarch64') }}:
               hostArchitecture: Arm64
-            ${{ if eq(target.os, 'macOS') }}:
+            ${{ if eq(target.poolName, 'AcesShared') }}:
               demands:
               - ImageOverride -equals ACES_VM_SharedPool_Sequoia
           variables:
             arch: ${{ target.arch }}
-            ${{ if target.ARCHFLAGS }}:
-              ARCHFLAGS: ${{ target.ARCHFLAGS }}
             ${{ if eq(target.os, 'windows') }}:
                 LLVM_DIRECTORY: $(Build.SourcesDirectory)\target\llvm
             ${{ else }}:
@@ -121,7 +129,19 @@ extends:
           - task: UsePythonVersion@0
             inputs:
               versionSpec: $(PYTHON_VERSION)
-            condition: ne(variables['arch'], 'aarch64')
+              ${{ if eq(target.arch, 'aarch64') }}:
+                architecture: "arm64"
+            condition: and(succeeded(), not(and(eq(variables['Agent.OS'], 'Linux'), eq(variables['arch'], 'aarch64'))))
+
+          # UsePythonVersion@0 does not support aarch64, so we install Python manually
+          # using tdnf on Azure Linux 3.0 aarch64
+          # We also need alias python3 as python
+          - script: |
+              sudo tdnf install python3-3.12.9 python3-pip-24.2 -y
+              sudo alternatives --install /usr/bin/python python /usr/bin/python3 1
+            displayName: Install Python on Azure Linux 3.0 aarch64
+            condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'), eq(variables['arch'], 'aarch64'))
+
           # Build or restore LLVM
           - pwsh: New-Item -ItemType Directory -Path $(LLVM_DIRECTORY) -Force
             displayName: Ensure cache dir exists
@@ -167,7 +187,7 @@ extends:
 
           - script: |
               sudo tdnf install ninja-build cmake -y
-            displayName: Install c++ build tools on mariner
+            displayName: Install c++ build tools on Azure Linux 3.0 aarch64
             condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'), eq(variables['arch'], 'aarch64'), ne(variables.CACHE_RESTORED, 'true'))
 
           - script: |
@@ -178,16 +198,26 @@ extends:
           - script: |
               choco install --accept-license -y ninja
             displayName: Install build dependencies
-            condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'), ne(variables.CACHE_RESTORED, 'true'))
+            condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'), eq(variables['arch'], 'x86_64'), ne(variables.CACHE_RESTORED, 'true'))
 
-          # on mariner we need to install:
+          # ninja is not available on windows aarch64 images, so we install it from its github releases
+          - pwsh: ./build.ps1 -t install-ninja
+            displayName: Install build dependencies
+            condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'), eq(variables['arch'], 'aarch64'), ne(variables.CACHE_RESTORED, 'true'))
+
+          # all platforms: verify ninja is installed
+          - pwsh: ./build.ps1 -t verify-ninja
+            displayName: Verify ninja build dependencie
+            condition: and(succeeded(), ne(variables.CACHE_RESTORED, 'true'))
+
+          # on Azure Linux 3.0 aarch64 we need to install:
           # ld with binutils
           # crt1.o and others with glibc-devel
           # std lib headers with kernel-headers
           # ninja and cmake for building LLVM
           - script: |
-              sudo tdnf install binutils glibc-devel kernel-headers -y
-            displayName: Install c++ build tools on mariner
+              sudo tdnf install binutils glibc-devel kernel-headers gcc -y
+            displayName: Install c++ build tools on Azure Linux 3.0 aarch64
             condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'), eq(variables['arch'], 'aarch64'))
 
           # build and install LLVM
@@ -196,39 +226,20 @@ extends:
             displayName: Build and Install LLVM
             condition: and(succeeded(), not(canceled()), not(failed()), ne(variables.CACHE_RESTORED, 'true'))
 
-          # On macOS, we use ARCHFLAGS to ensure that
-          # LLVM is built for the correct architecture.
-          # This and the condition above are only needed for cross-compiling, which for now we are skipping.
-          # - script: |
-          #     echo "env ARCHFLAGS='$(ARCHFLAGS)' ./build.ps1 -t install-llvm-from-source"
-          #     env ARCHFLAGS="$(ARCHFLAGS)" ./build.ps1 -t install-llvm-from-source
-          #   displayName: Build and Install LLVM
-          #   condition: and(succeeded(), not(canceled()), not(failed()), ne(variables.CACHE_RESTORED, 'true'), eq(variables['Agent.OS'], 'Darwin'))
-
           # Build PyQIR
-          - pwsh: ./build.ps1 -t default
+          - pwsh: ./build.ps1
             displayName: Build
-            # condition: and(succeeded(), ne(variables['Agent.OS'], 'Darwin'))
-
-          # On macOS, we use ARCHFLAGS to ensure that
-          # LLVM is built for the correct architecture.
-          # This and the condition above are only needed for cross-compiling, which for now we are skipping.
-          # - pwsh: env ARCHFLAGS="$(ARCHFLAGS)" ./build.ps1 -t build
-          #   displayName: Build
-          #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'))
-          # - pwsh: ./build.ps1 -t test
-          #   displayName: Build
-          #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Darwin'), ne(variables['arch'], 'aarch64'))
+            condition: succeeded()
 
           - script: |
               dir target\wheels\*
             displayName: List Py Packages on Win
-            condition: eq(variables['Agent.OS'], 'Windows_NT')
+            condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
           - script: |
               ls target/wheels/*
             displayName: List Py Packages on non-Win
-            condition: ne(variables['Agent.OS'], 'Windows_NT')
+            condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows_NT'))
 
     - stage: approval
       displayName: Approval
