--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: manylinux-artifacts
+          name: ubuntu-22.04-x86_64-artifacts
           path: target/wheels
 
       - name: Build Docs
