--- a/.ado/release.yml
+++ b/.ado/release.yml
@@ -23,7 +23,7 @@ schedules:
 
 variables:
   CARGO_TERM_COLOR: always
-  RUST_TOOLCHAIN_VERSION: "1.86"
+  RUST_TOOLCHAIN_VERSION: "1.90"
   PYTHON_VERSION: "3.11"
   LLVM_VERSION: 20
   # use this to invalidate the cache. Any time we update the OS
@@ -113,7 +113,7 @@ extends:
           steps:
           - task: RustInstaller@1
             inputs:
-              rustVersion: ms-$(RUST_TOOLCHAIN_VERSION)
+              rustVersion: ms-prod-$(RUST_TOOLCHAIN_VERSION)
               ${{ if target.additionalRustTargets }}:
                 additionalTargets: ${{ target.additionalRustTargets }}
               cratesIoFeedOverride: $(cratesIoFeedOverride)
